--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="./styles/animations.css" />
 </head>
 <body class="page">
-<header class="header">
+<header>
     <h1>&lt;/HTML&gt;</h1>
     <h2>Закрывающий тег</h2>
 </header>
-<main class="main">
+<main>
     <div class="cards">
         <div class="card">
             <div class="card__header">
